[gd_scene load_steps=8 format=2]

[ext_resource path="res://Util/FileChooser.tscn" type="PackedScene" id=1]
[ext_resource path="res://Util/GridPlane/GridPlane.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Layers/Misc/ProfileEditor/ProfileEditor.gd" type="Script" id=3]

[sub_resource type="Curve3D" id=1]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -8 ),
"tilts": PoolRealArray( 0, 0 )
}

[sub_resource type="QuadMesh" id=2]
size = Vector2( 50, 50 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_cull_mode = 2
params_depth_draw_mode = 1

[sub_resource type="Environment" id=4]
ambient_light_color = Color( 0.65098, 0.65098, 0.65098, 1 )

[node name="ProfileEditor" type="WindowDialog"]
margin_right = 930.0
margin_bottom = 500.0
rect_min_size = Vector2( 930, 500 )
popup_exclusive = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HBoxContainer" parent="."]
margin_right = 558.0
margin_bottom = 424.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="HSplitContainer"]
margin_right = 500.0
margin_bottom = 500.0
rect_min_size = Vector2( 500, 500 )

[node name="Viewport" type="Viewport" parent="HSplitContainer/ViewportContainer"]
size = Vector2( 500, 500 )
own_world = true
handle_input_locally = false
keep_3d_linear = true
render_target_v_flip = true
render_target_update_mode = 0

[node name="Spatial" type="Spatial" parent="HSplitContainer/ViewportContainer/Viewport"]

[node name="Path" type="Path" parent="HSplitContainer/ViewportContainer/Viewport/Spatial"]
curve = SubResource( 1 )

[node name="Camera" type="Camera" parent="HSplitContainer/ViewportContainer/Viewport/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.6652 )
projection = 1
fov = 68.2899
size = 4.0

[node name="MousePoint" type="RayCast" parent="HSplitContainer/ViewportContainer/Viewport/Spatial/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
enabled = true
cast_to = Vector3( 0, 0, -1000 )
collide_with_areas = true

[node name="BackGround" type="MeshInstance" parent="HSplitContainer/ViewportContainer/Viewport/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9.27089 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="GridPlane" parent="HSplitContainer/ViewportContainer/Viewport" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, -10, 11, -8.602 )
lines = 21
grid_size = 1

[node name="GridPlane2" parent="HSplitContainer/ViewportContainer/Viewport" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -8 )
lines = 20
grid_size = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="HSplitContainer/ViewportContainer/Viewport"]
environment = SubResource( 4 )

[node name="Vbox" type="VBoxContainer" parent="HSplitContainer"]
margin_left = 508.0
margin_right = 781.0
margin_bottom = 500.0

[node name="ChangeViewButton" type="Button" parent="HSplitContainer/Vbox"]
margin_right = 273.0
margin_bottom = 37.0
text = "Change View"

[node name="AddProfileButton" type="Button" parent="HSplitContainer/Vbox"]
margin_top = 45.0
margin_right = 273.0
margin_bottom = 82.0
text = "Add Profile"

[node name="RemoveProfileButton" type="Button" parent="HSplitContainer/Vbox"]
margin_top = 90.0
margin_right = 273.0
margin_bottom = 127.0
text = "Remove Profile"

[node name="AddPointButton" type="Button" parent="HSplitContainer/Vbox"]
margin_top = 135.0
margin_right = 273.0
margin_bottom = 172.0
text = "Add Point"

[node name="RemovePointButton" type="Button" parent="HSplitContainer/Vbox"]
margin_top = 180.0
margin_right = 273.0
margin_bottom = 217.0
text = "Remove Point"

[node name="FileChooser" parent="HSplitContainer/Vbox" instance=ExtResource( 1 )]
margin_top = 225.0
margin_right = 273.0
margin_bottom = 265.0
filters = PoolStringArray( "*.jpg", "*.png" )

[node name="AddText" type="Button" parent="HSplitContainer/Vbox/FileChooser"]
margin_left = 117.0
margin_right = 273.0
margin_bottom = 40.0
text = "Add Texture"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileChooser2" parent="HSplitContainer/Vbox" instance=ExtResource( 1 )]
margin_top = 273.0
margin_right = 273.0
margin_bottom = 313.0
filters = PoolStringArray( "*.jpg", "*.png" )

[node name="AddObject" type="Button" parent="HSplitContainer/Vbox/FileChooser2"]
margin_left = 130.0
margin_right = 273.0
margin_bottom = 40.0
text = "Add Object"
__meta__ = {
"_edit_use_anchors_": false
}
